--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,8 @@
        {% endif %}
 
        {% if site.tagline %}
-       <h3 class="tagline">{{site.tagline}}</h3>
+       <h4>{{site.tagline}}</h4>
+       <h4 class="tagline">{{site.subtagline}}</h4>
        {% endif %}
 
    </div><!--//profile-container-->
