--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -4,10 +4,7 @@
   <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
 
     <div class="summary">
-      	<p>► ~3.5 years of experience while working in product-based startups. Currently working as ‘Software Developer’ on a SaaS product, involved in designing scalable system using microservice-based(SOA) architecture. </p>
-
-		<p>► Open to explore new technologies/paradigm(Functional programming/Reactive programming/Big data/Machine learning etc.).</p>
-
+      <p>{{ site.summary }}</p>
     </div><!--//summary-->
     
 </section><!--//section-->
