--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,9 @@
   <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
 
   <div class="skillset">
-
+<div class="meter emerald">
+                    <span style="width: 237px;"><span>Aspect-oriented Programming</span></span>
+                                </div>
     {% for skill in site.data.skills %}
     <div class="item">
 
