--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -9,16 +9,15 @@
       <span style="width: {{ skill.level }};"><span>{{ skill.name }}</span></span>
     </div>
 
-    <!-- <div class="item">
-
+    <!-- 
+    <div class="item">
       <h3 class="level-title">{{ skill.name }}</h3>
-
       <div class="level-bar">
         <div class="level-bar-inner" data-level="{{ skill.level }}">
         </div>
-      </div><!--//level-bar-->
-
-    </div> --><!--//item-->
+      </div>
+    </div> 
+    -->
     {% endfor %}
 
   </div>
