--- a/assets/less/css/styles.css
+++ b/assets/less/css/styles.css
@@ -321,6 +321,7 @@ p {
 .meter > span  > span{
   margin-left: 4px;
   color: #fff;
+  font-weight: 9;
 }
 .meter > span:after, .animate > span > span {
   content: "";
