--- a/assets/less/css/styles.css
+++ b/assets/less/css/styles.css
@@ -282,6 +282,8 @@ p {
     float: left;
     width: 30%;
     margin-bottom: 0;
+    margin-top: 5px;
+    font-size: 15px;
   }
   .skillset .level-bar {
     display: inline-block;
@@ -289,6 +291,7 @@ p {
     float: left;
     position: relative;
     top: 1px;
+    height: 24px;
   }
 }
 /* Large devices (large desktops, 1200px and up) */
